--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "jest-environment-jsdom-fourteen": "0.1.0",
     "jest-resolve": "24.9.0",
     "jest-watch-typeahead": "0.4.0",
+    "lodash": "^4.17.15",
     "mini-css-extract-plugin": "0.8.0",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "pnp-webpack-plugin": "1.5.0",
@@ -48,6 +49,7 @@
     "postcss-safe-parser": "4.0.1",
     "react": "^16.9.0",
     "react-app-polyfill": "^1.0.3",
+    "react-beautiful-dnd": "^11.0.5",
     "react-dev-utils": "^9.0.4",
     "react-dom": "^16.9.0",
     "resolve": "1.12.0",
@@ -55,6 +57,7 @@
     "sass-loader": "7.2.0",
     "semver": "6.3.0",
     "style-loader": "1.0.0",
+    "tachyons": "^4.11.1",
     "terser-webpack-plugin": "1.4.1",
     "ts-pnp": "1.1.4",
     "typescript": "3.6.3",
@@ -136,5 +139,9 @@
     "presets": [
       "react-app"
     ]
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.14.139",
+    "@types/react-beautiful-dnd": "^11.0.3"
   }
 }
